# Univital

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  chatbot_service.py  database.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  risk_store.py  schemas.py  test_api.py
backend/data/: profile_highrisk_fulton.json  profile_lowrisk_fulton.json  profile_lowrisk_fulton__add_chronic_med.json  profile_lowrisk_fulton__income_plus_10pct.json  profile_lowrisk_fulton__subsidy_expiration.json  profile_lowrisk_fulton__two_er_visits.json  profile_midrisk_fulton.json
backend/src/univital_api/: config.py  main.py
backend/src/univital_api/api/routes/: plans.py  risk.py  shock.py
backend/src/univital_api/models/schemas/: plan.py  policy.py  shock.py
backend/src/univital_api/services/: databricks_client.py  plan_catalog.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ArchitectureDiagram.tsx  FragilityCurveChart.tsx  InputsForm.tsx  PlanComparisonTable.tsx  PolicyClauseCard.tsx  ShockTestPanel.tsx
frontend/src/layout/: MainLayout.tsx
frontend/src/pages/: Architecture.tsx  Chat.tsx  Compare.tsx  Dashboard.tsx  (+1 more)
hackathon/chatbot/: chatbot.py  checkmodels.py  finalPlans.csv  requirements.txt
hackathon/data/: datastore.ini
scripts/: seed_plans.py
univital/: .env.example  .gitignore
univital/frontend/: package.json
univital/vectorai/: Dockerfile
vectorai/ingestion/: ingest_pdfs.py
vectorai/query/: query_policy.py
(+36 files in other folders)
